# vantage

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  ONBOARDING.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
crates/agent/: Cargo.toml  build.rs
crates/agent/src/: collect.rs  kube.rs  main.rs  push.rs  tunnel.rs
crates/hub/: Cargo.toml  build.rs
crates/hub/src/: alert.rs  api.rs  audit.rs  auth.rs  backup.rs  console.rs  data_admin.rs  db.rs  ingest.rs  install.rs  logbuf.rs  main.rs  mcp.rs  net_guard.rs  notify.rs  passkey.rs  probe.rs  rbac.rs  selfupdate.rs  spa.rs  tunnel.rs  ui.rs  web.rs
crates/hub/src/api/: alerting.rs  data.rs  exec.rs  exposure.rs  keys.rs  mod.rs  monitors.rs  passkey.rs  servers.rs  twofa.rs  users.rs  workspaces.rs
crates/hub/src/api/alerting/: alerts.rs  channels.rs  mod.rs  status_pages.rs
crates/hub/src/backup/: mod.rs  s3.rs
crates/hub/src/notify/: mod.rs  notification.rs  schema.rs  transports.rs
crates/hub/src/probe/: checks.rs
crates/hub/src/web/: kube.rs  mod.rs  monitors.rs
crates/hub/src/web/monitors/: detail.rs  events.rs  list.rs  mod.rs
crates/hub/src/web/systems/: fleet.rs  list.rs  metrics.rs
crates/hub/static/: app.css
crates/hub/templates/: agent.yaml.tmpl  install.sh
crates/shared/src/: lib.rs  tunnel.rs
deploy/: Dockerfile.agent  Dockerfile.hub  README.md  autoupdate-deploy-patch.yaml  autoupdate-rbac.yaml
deploy/agent/: Chart.yaml  values.yaml
deploy/agent/templates/: cluster-agent.yaml  daemonset.yaml
deploy/chart/: Chart.yaml  values.yaml
deploy/chart/templates/: NOTES.txt  _helpers.tpl  agent.yaml  backup-cronjob.yaml  db.yaml  hub.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  timescaledb.yaml
deploy/k8s/: agent.yaml  cluster-agent.yaml
docs/: API.md  README.md  ROADMAP.md  SCHEMA_REVIEW.md  exec-design.md  exposure.md
frontend/: .gitignore  PLAN.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: AccountMenu.vue  AddSystemModal.vue  AppHeader.vue  AppShell.vue  ChannelCard.vue  ChannelFieldInput.vue  ChannelForm.vue  Chart.vue  ConfirmDialog.vue  DataTable.vue  EventStream.vue  FleetCharts.vue  FleetHeatmap.vue  Gauge.vue  IncidentList.vue  MemberAccessChips.vue  MemberAddForm.vue  MemberRoleEditor.vue  MonitorDebugCard.vue  MonitorHeartbeatBar.vue  MonitorIncidentsList.vue  MonitorMetaCard.vue  NamespacePicker.vue  SidebarNav.vue  SystemAlertRules.vue  SystemChartPanel.vue  SystemMetaCard.vue  SystemRangePicker.vue  SystemSearch.vue  SystemShellCard.vue  UplotChart.vue  WorkspacePicker.vue
frontend/src/lib/: api.js  cache.js  confirm.js  hostFilter.js  icons.js  triage.js  webauthn.js  zoom.js
frontend/src/pages/: About.vue  AlertEdit.vue  Alerts.vue  ApiTokens.vue  Audit.vue  Backup.vue  ChannelDetail.vue  ClusterDetail.vue  Clusters.vue  Console.vue  DataRetention.vue  Events.vue  FleetMetrics.vue  FleetOverview.vue  Login.vue  Logs.vue  Members.vue  MonitorDetail.vue  MonitorEdit.vue  Monitors.vue  NamespaceDetail.vue  Namespaces.vue  Notifications.vue  Overview.vue  SecuritySettings.vue  SshKeys.vue  SystemDetail.vue  Systems.vue  WorkspaceDetail.vue  Workspaces.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js  ui.js
migrations/config/: 0001_init.sql  0002_default_namespace.sql  0002_default_workspace.sql  0003_read_all.sql  0004_thresholds.sql  0006_monitor_kinds.sql  0007_monitor_kinds2.sql  0009_app_settings.sql  0010_alert_events.sql  0014_api_pats.sql  0015_alert_scope.sql  0017_exec.sql  0023_webauthn.sql  0025_data_cap.sql  0027_rename_namespace_to_workspace.sql  0028_systems_dedup_by_workspace.sql  0029_systems_k8s_version.sql
migrations/data/: 0001_init.sql  0002_disk_util.sql  0003_mem_detail.sql  0004_kube_stats.sql  0005_kube_container_stats.sql
scripts/: .gitignore  check-alerts.sh  check-api.sh  check-audit.sh  check-backup.sh  check-changelog.sh  check-ci.sh  check-config-migrations.sh  check-css-tokens.sh  check-data-admin.sh  check-data-cap.sh  check-features.sh  check-kube-stats.sh  check-kube.sh  check-prototype.sh  check-push-token.sh  check-release.sh  check-secrets.sh  check-systems.sh  check-upgrades.sh  check-validation.sh  check-ws-rule.sh  dev-hub.sh  disk-cleanup.sh  frontend.sh  redeploy-hub.sh  reset-stack.sh  run-agent.sh  serve-prototype.sh  sim-agents.mjs  sim-agents.sh  sim-reset.sh  sim-smoke.sh  squash-migrations.sh  verify-stack.sh
ui-prototype/: PLAN.md  README.md
ui-prototype/simple/: index.html  login.html
ui-prototype/simple/css/: styles.css
ui-prototype/simple/js/: app.js  shell.js
ui-prototype/simple/pages/: monitors.html  server.html  status.html
web/: input.css  tailwind.config.js
