[package]
name = "vantage-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vantage-agent"
path = "src/main.rs"

[dependencies]
shared.workspace = true
# Minimal tokio (not the workspace "full") — the agent only needs a single-thread
# runtime, timers and a subprocess for nvidia-smi. Keeps threads + size down.
tokio = { version = "1", default-features = false, features = ["rt", "macros", "time", "process", "net", "io-util", "signal", "sync"] }
# Own reqwest (not workspace) with webpki-roots: the CA bundle is compiled into
# the binary, so the static musl build needs no cert files → runs on `scratch`.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
# Reverse tunnel for the shell/exec feature (only used when ALLOW_SHELL=1). Same
# rustls + webpki-roots stack as reqwest so the static musl build still needs no
# cert files. `rustls` is pulled directly only to install the ring crypto provider
# as the process default (tungstenite's TLS builder reads it).
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sysinfo = "0.33"
nix = { version = "0.29", features = ["fs"] }
bollard = "0.17"
futures-util = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
