[package]
name = "vantage-hub"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vantage-hub"
path = "src/main.rs"

[dependencies]
shared.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["cookie"] }
rust-embed = "8"
mime_guess = "2"
argon2 = "0.5"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
surge-ping = "0.8"
rand = "0.8"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "mysql",
    "chrono",
    "uuid",
    "macros",
    "migrate",
    "json",
] }
mongodb = "3"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
x509-parser = "0.16"
flate2 = "1"
# S3 / S3-compatible via manual AWS SigV4 (tiny deps) over the existing reqwest —
# avoids pulling a heavy S3 SDK dependency tree.
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
# SMTP for the Email notification channel. rustls to match the rest of the stack
# (no OpenSSL/system deps), async over tokio.
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
    "hostname",
] }
