[package]
name = "vantage-hub"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vantage-hub"
path = "src/main.rs"

[dependencies]
shared.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["cookie"] }
rust-embed = "8"
mime_guess = "2"
argon2 = "0.5"
# AEAD for encrypting users' stored SSH keys at rest (XChaCha20-Poly1305 — random
# 24-byte nonces, no nonce-reuse footgun). Key = argon2 KEK from the user's password.
chacha20poly1305 = "0.10"
# SSH client for the shell/exec bridge — runs over the agent TunnelStream to reach a
# host's local sshd. Hub-only (the heavy side); the agent stays tiny.
russh = "0.45"
async-trait = "0.1" # russh's client::Handler is an #[async_trait]
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
surge-ping = "0.8"
rand = "0.8"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "mysql",
    "chrono",
    "uuid",
    "macros",
    "migrate",
    "json",
] }
mongodb = "3"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
x509-parser = "0.16"
flate2 = "1"
# S3 / S3-compatible via manual AWS SigV4 (tiny deps) over the existing reqwest —
# avoids pulling a heavy S3 SDK dependency tree.
hmac = "0.12"
sha2 = "0.10"
# HMAC-SHA1 for TOTP (RFC 6238) two-factor auth. Already in the tree via russh.
sha1 = "0.10"
hex = "0.4"
# SMTP for the Email notification channel. rustls to match the rest of the stack
# (no OpenSSL/system deps), async over tokio.
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
    "hostname",
] }
qrcode = { version = "0.14.1", default-features = false }
webauthn-rs = { version = "0.5.5", features = ["danger-allow-state-serialisation"] }
url = "2.5.8"
